Fix CSS overflow for window content

--- a/framlr.css
+++ b/framlr.css
@@ -10,7 +10,7 @@ body{margin:inherit;background:transparent}
 	border-radius:10px;
 }
 
-#wm-content{/* height:calc(100% - 34px)!important */height: calc(100% - 36px)!important;}
+#wm-content{overflow: auto;/* height:calc(100% - 34px)!important */height: calc(100% - 36px)!important;}
 
 .wm-window-title {
     user-select: none;
